@@ -1,3 +1,8 @@
+2009-07-20  Donal K. Fellows  <dkf@users.sf.net>
+
+	* tests/clipboard.test (clipboard-6.2): [Bug 2824378]: Corrected
+	result of test in light of changes to binary selection retrieval.
+
 2009-07-18  Donal K. Fellows  <dkf@users.sf.net>
 
 	* unix/tkUnixSelect.c (SelCvtFromX32, SelCvtFromX8): Make the
